Fixed social icon spacing and sizing

--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -221,3 +221,15 @@ div.challenge {
 .cl-effect-1 a:after {
   color: #7ba329 !important;
 }
+
+.Socialcons-social-0-1-42 {
+  margin-top: 20px;
+}
+
+.Socialcons-link-0-1-43 svg {
+  width: 30px !important;
+  height: 30px !important;
+  margin-left: 4px;
+  margin-right: 4px;
+  fill: #777777;
+}
